--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/stereogram.js"></script>
+        <script src="scripts/directives/texturegroup.js"></script>
         <!-- endbuild -->
 </body>
 </html>
